# cookiecutter-python-package

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.repo_name}}/: .pre-commit-config.yaml  MANIFEST.in  pyproject.toml  setup.cfg  setup.py  tox.ini
{{cookiecutter.repo_name}}/docs/source/: conf.py  index.rst  introduction.rst  quickstart.rst
{{cookiecutter.repo_name}}/docs/source/_static/: custom.css
{{cookiecutter.repo_name}}/src/{{cookiecutter.project_slug}}/: __init__.py  __main__.py  cli.py
