[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.

[versioneer]
VCS = git
style = pep440
versionfile_source = src/{{cookiecutter.project_slug}}/_version.py
versionfile_build = {{cookiecutter.project_slug}}/_version.py
tag_prefix =
parentdir_prefix = {{cookiecutter.project_slug}}-

[flake8]
max-line-length = 79
max-complexity = 18
select = B,C,E,F,W,T4,B9
ignore = E203, E266, E501, W503, F403, F401
exclude = versioneer.py
